# cuda-to-sycl-nbody

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  nbody
.github/workflows/: scorecard.yml
cmake/: ComputeCppConfig.cmake  FindVulkan.cmake  Finddpct.cmake
include/glad/: glad.h
libs/imgui/: CMakeLists.txt
scripts/: build_computecpp.sh  build_cuda.sh  build_dpcpp.sh  build_sycl.sh  docker_build_etc.sh  perf_test.sh  perf_test_cuda.sh  perf_test_dpcpp.sh  run.sh  run_dpct.sh  run_dpct_native.sh  run_nbody.sh  xvfb.sh
shaders/: integration.comp
shaders/gl/: blur.frag  deferred.vert  integration.comp  interaction.comp  luminance.frag  main.frag  main.geom  main.vert  tonemap.frag
shaders/vk/: blur.frag  compile.sh  deferred.vert  integration.comp  integration_comp.spv  interaction.comp  interaction_comp.spv  luminance.frag  main.frag  main.geom  main.vert  main_frag.spv  main_geom.spv  main_vert.spv
src/: CMakeLists.txt  camera.cpp  camera.hpp  gen.cpp  gen.hpp  gl.cpp  gl.hpp  glad.c  nbody.cpp  renderer.hpp  renderer_gl.cpp  renderer_gl.hpp  renderer_vk.cpp  renderer_vk.hpp  shader.cpp  shader.hpp  sim_param.cpp  sim_param.hpp  simulator.cu  simulator.cuh  vulkan_app.cpp  vulkan_app.hpp
src_sycl/: CMakeLists.txt  README.md  camera.cpp  camera.hpp  gen.cpp  gen.hpp  nbody.cpp  renderer.hpp  renderer_gl.cpp  renderer_gl.hpp  shader.cpp  shader.hpp  sim_param.cpp  sim_param.hpp  simulator.dp.cpp  simulator.dp.hpp
src_sycl/include/dpct/: device.hpp  dpct.hpp
